K1J-1588: Use testfixtures and already defined dtos for code.